--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss": "^8.0.0",
     "tailwindcss": "^3.3.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "15.0.0"
+    "eslint-config-next": "15.0.0",
+    "prettier": "^2.8.8"
   }
 }
