--- a/package.json
+++ b/package.json
@@ -21,28 +21,29 @@
     "dev:first": "./dev.sh"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.15.0",
+    "clsx": "^2.0.0",
+    "comlink": "^4.4.1",
+    "lucide-react": "^0.394.0",
     "next": "15.0.0",
+    "onnxruntime-web": "^1.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@tensorflow/tfjs": "^4.15.0",
-    "tesseract.js": "^5.0.4",
     "recharts": "^2.8.0",
-    "comlink": "^4.4.1",
-    "onnxruntime-web": "^1.16.3",
-    "lucide-react": "^0.394.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "tesseract.js": "^5.0.4"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8.0.0",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "15.0.0",
-    "prettier": "^2.8.8"
+    "postcss": "^8.0.0",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.0.0"
   }
 }
